# pyKVFinder

./: .gitattributes  .gitignore  MANIFEST.in  README.md  README.rst  coverage.txt  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.yml  feature_request.md  feature_request.yml  maintenance.yml
.github/workflows/: coverage.yml  deploy-integration.yml  deploy-macos-intel.yml  deploy.yml  integration-testing.yml  publish-release.yml  pylint.yml  testing.yml  unit-testing.yml
C/: pyKVFinder.c  pyKVFinder.h  pyKVFinder.i
data/: dictionary  vdw.json  vdw.toml
docs/: .buildinfo  INSTRUCTIONS.rst  Makefile  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/_about/: index.doctree
docs/.doctrees/_api_reference/: Molecule.doctree  Molecule.export.doctree  Molecule.preview.doctree  Molecule.surface.doctree  Molecule.vdw.doctree  Molecule.volume.doctree  calculate_frequencies.doctree  constitutional.doctree  depth.doctree  detect.doctree  export.doctree  export_openings.doctree  get_dimensions.doctree  get_grid_from_file.doctree  get_sincos.doctree  get_vertices.doctree  get_vertices_from_file.doctree  hydropathy.doctree  index.doctree  openings.doctree  plot_frequencies.doctree  pyKVFinder.doctree  pyKVFinderResults.doctree  pyKVFinderResults.export.doctree  pyKVFinderResults.export_all.doctree  pyKVFinderResults.plot_frequencies.doctree  pyKVFinderResults.write.doctree  read_cavity.doctree  read_pdb.doctree  read_vdw.doctree  read_xyz.doctree  run_workflow.doctree  spatial.doctree  write_results.doctree
docs/.doctrees/_cfg_files/: box_file_template.doctree  hydrophobicity_scale_file_template.doctree  vdw_file_template.doctree
docs/.doctrees/_cli/: index.doctree
docs/.doctrees/_installation/: index.doctree
docs/.doctrees/_tutorial/: index.doctree
docs/.doctrees/about/: index.doctree
docs/_about/: index.html
docs/_api_reference/: Molecule.export.html  Molecule.html  Molecule.preview.html  Molecule.surface.html  Molecule.vdw.html  Molecule.volume.html  calculate_frequencies.html  constitutional.html  depth.html  detect.html  export.html  export_openings.html  get_dimensions.html  get_grid_from_file.html  get_sincos.html  get_vertices.html  get_vertices_from_file.html  hydropathy.html  index.html  openings.html  plot_frequencies.html  pyKVFinder.html  pyKVFinderResults.export.html  pyKVFinderResults.export_all.html  pyKVFinderResults.html  pyKVFinderResults.plot_frequencies.html  pyKVFinderResults.write.html  read_cavity.html  read_pdb.html  read_vdw.html  read_xyz.html  run_workflow.html  spatial.html  write_results.html
docs/_cfg_files/: box_file_template.html  hydrophobicity_scale_file_template.html  vdw_file_template.html
docs/_cli/: index.html
docs/_installation/: index.html
docs/_modules/: index.html
docs/_modules/pyKVFinder/: grid.html  main.html  utils.html
docs/_sources/: index.rst.txt
docs/_sources/_about/: index.rst.txt
docs/_sources/_api_reference/: Molecule.preview.rst.txt  Molecule.volume.rst.txt  calculate_frequencies.rst.txt  constitutional.rst.txt  depth.rst.txt  detect.rst.txt  export.rst.txt  export_openings.rst.txt  get_dimensions.rst.txt  get_grid_from_file.rst.txt  get_sincos.rst.txt  get_vertices.rst.txt  get_vertices_from_file.rst.txt  hydropathy.rst.txt  index.rst.txt  openings.rst.txt  pyKVFinder.rst.txt  pyKVFinderResults.export.rst.txt  pyKVFinderResults.plot_frequencies.rst.txt  pyKVFinderResults.rst.txt  read_cavity.rst.txt  read_pdb.rst.txt  read_vdw.rst.txt  read_xyz.rst.txt  run_workflow.rst.txt  spatial.rst.txt
docs/_sources/_cli/: index.rst.txt
docs/_sources/_tutorial/: index.rst.txt
docs/_sources/about/: index.rst.txt
docs/_static/: documentation_options.js
docs/_tutorial/: index.html
docs/about/: index.html
docs/package/api_reference/: Molecule.html  box_file_template.html  calculate_frequencies.html  constitutional.html  depth.html  detect.html  export.html  export_openings.html  get_vertices.html  get_vertices_from_file.html  hydropathy.html  hydrophobicity_scale_file_template.html  index.html  openings.html  plot_frequencies.html  pyKVFinderResults.html  read_cavity.html  read_pdb.html  read_vdw.html  read_xyz.html  run_workflow.html  spatial.html  vdw_file_template.html  write_results.html
docs/package/examples/: index.html
docs/package/installation/: index.html
docs/package/tutorial/: index.html
docs/source/: conf.py  index.rst
etc/evolutive-analysis/: evolutive-analysis.ipynb
etc/performance/: read_vdw_formats.ods
etc/templates/: box.toml
etc/visualization/: pyKVFinder-ngl-visualization.ipynb
examples/conservation-analysis/: conservation-analysis.ipynb
examples/md-analysis/: box.toml  md-analysis.ipynb
examples/smc-analysis/: smc-analysis.ipynb
examples/visualization/: ngl-visualization.ipynb
gui/PyMOL-pyKVFinder-Tools/: INSTALLATION.md  PyMOL-pyKVFinder-Tools.ui  __init__.py
gui/chimerax/: INSTALLATION.md  INSTALLATION.rst
performance/data/: time.csv
performance/scripts/: INSTRUCTIONS.rst
plugins/PyMOL-pyKVFinder-Tools/: INSTALLATION.md  PyMOL-pyKVFinder-Tools.ui  __init__.py  box.py  gui.py  visualization.py
plugins/pymol/: PyMOL-pyKVFinder-Tools.ui  __init__.py  actions.py  box.py  gui.py  visualization.py
pyKVFinder/: __init__.py  argparser.py  grid.py  gridprocessing.py  main.py  utils.py
pyKVFinder/data/: EisenbergWeiss.toml  HessaHeijne.toml  KyteDoolitte.toml  KyteDoolittle.toml  MoonFleming.toml  RadzickaWolfenden.toml  WimleyWhite.toml  ZhaoLondon.toml
pyKVFinder/grid/: __init__.py  cavity.py  constitutional.py  depth.py  detect.py  export.py  geometry.py  hydropathy.py  openings.py  spatial.py
pyKVFinder/modules/: utils.py
src/: depth.c  depth.h  depth.i  grid.c  grid.h  grid.i
tests/: test_grid.py  tests.py
tests/files/: eval.py
tests/grid/: eval.py
tests/integration/: test_cli.py  test_package.py
tests/performance/: test_cli.py
tests/unit/: test_grid.py  test_utils.py
(+218 files in other folders)
